--- a/index.html
+++ b/index.html
@@ -19,7 +19,26 @@
 		/>
 	</head>
 	<body>
-		Jessica Randall London, United Kingdom "Front-end developer and avid
-		reader." GitHub Frontend Mentor LinkedIn Twitter Instagram
+		<main>
+			<div class="card">
+				<img
+					class="card-img"
+					src="images/avatar-jessica.jpeg"
+					alt="Jessica Randall's avatar"
+					width="176"
+					height="176"
+				/>
+				<div class="card-title">
+					<h1>Jessica Randall</h1>
+					<p>London, United Kingdom</p>
+				</div>
+				<p>"Front-end developer and avid reader."</p>
+				<p><a>GitHub</a></p>
+				<p><a>Frontend Mentor</a></p>
+				<p><a>LinkedIn</a></p>
+				<p><a>Twitter</a></p>
+				<p><a>Instagram</a></p>
+			</div>
+		</main>
 	</body>
 </html>
