Mobile version done

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 					<h1>Jessica Randall</h1>
 					<p>London, United Kingdom</p>
 				</div>
-				<p>"Front-end developer and avid reader."</p>
-				<p><a>GitHub</a></p>
-				<p><a>Frontend Mentor</a></p>
-				<p><a>LinkedIn</a></p>
-				<p><a>Twitter</a></p>
-				<p><a>Instagram</a></p>
+				<p class="card-text">"Front-end developer and avid reader."</p>
+				<a class="card-link" href="#"><p>GitHub</p></a>
+				<a class="card-link" href="#"><p>Frontend Mentor</p></a>
+				<a class="card-link" href="#"><p>LinkedIn</p></a>
+				<a class="card-link" href="#"><p>Twitter</p></a>
+				<a class="card-link" href="#"><p>Instagram</p></a>
 			</div>
 		</main>
 	</body>
